--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,6 +5,7 @@
   get_url:
     url: '{{urbit_deb_url}}'
     dest: /tmp/{{urbit_deb}}
+    checksum: '{{urbit_deb_checksum}}'
     mode: 0644
 - name: install deb
   become: yes
