--- a/dcb-os.yml
+++ b/dcb-os.yml
@@ -1,5 +1,5 @@
+---
+- debian_bookworm
 - debian_buster
-- debian_jessie
-- debian_stretch
-- ubuntu_trusty
-- ubuntu_xenial
+- ubuntu_focal
+- ubuntu_jammy
