--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,15 +7,13 @@ galaxy_info:
     - MIT
   min_ansible_version: 2.0
   platforms:
-    - name: Ubuntu
-      versions:
-        - trusty
-        - xenial
     - name: Debian
       versions:
-        - jessie
-        - stretch
+        - bookworm
+        - bullseye
+    - name: Ubuntu
+      versions:
+        - focal
+        - jammy
   galaxy_tags:
     - development
-
-dependencies: []
